--- a/swagger/paths/water/{id}/deleteWater.yaml
+++ b/swagger/paths/water/{id}/deleteWater.yaml
@@ -1,8 +1,10 @@
 tags:
   - Water
-summary: Delete water record
+summary: Delete a water record
 operationId: WaterController_deleteWaterRecord
-description: 'Delete water record'
+description: |
+  Delete a water record
+
 security:
   - bearerAuth: []
 parameters:
@@ -14,7 +16,8 @@ parameters:
       example: '65ca67e7ae7f10c88b598384'
 responses:
   '204':
-    description: 'Water record by id successfully deleted'
+    description: |
+      Water record by id deleted
   '401':
     $ref: '../../../components/responses/401.yaml'
   '404':
