--- a/swagger/components/schemas/resetPassword.yaml
+++ b/swagger/components/schemas/resetPassword.yaml
@@ -1,19 +1,12 @@
 type: object
 required:
-  - user
+  - password
   - token
 properties:
-  user:
-    description: "Object with user's email"
-    type: object
-    required:
-      - email
-    properties:
-      email:
-        description: "User's email"
-        type: string
-        format: email
-        example: 'Harley.Gleason@gmail.com'
+  password:
+    description: "User's password"
+    type: string
+    example: 'pasword89'
   token:
     description: "User's token"
     type: string
