--- a/swagger/paths/auth/signIn.yaml
+++ b/swagger/paths/auth/signIn.yaml
@@ -2,10 +2,20 @@ tags:
   - Auth
 summary: Sign in existing user
 operationId: AuthController_loginUser
-description: 'Authenticates a user with payload'
+description: |
+  User authentication and authorization by passed email and password
 security: []
 requestBody:
   required: true
+  description: |
+    # Description of request parameters:
+
+    **email** - string, user's email.
+    **Required parameter**
+
+    **password** - string, user's password.
+    **Required parameter**
+
   content:
     application/json:
       schema:
@@ -24,13 +34,21 @@ requestBody:
             example: 'password89'
 responses:
   '200':
-    description: 'Sign in existing user'
+    description: |
+      Sign in existing user
+
+      Description of response parameters:
+
+      **user** - object, includes user's email.
+
+      **token** - string, token is used to store the authorization state
+      of the user in the system, which allows users to make secure requests
+      to the API.
+
     content:
       application/json:
         schema:
           $ref: '../../components/schemas/userWithTokenResponse.yaml'
-  '400':
-    $ref: '../../components/responses/400.yaml'
   '401':
     $ref: '../../components/responses/401.yaml'
   '404':
