--- a/swagger/paths/water/{id}/patchWater.yaml
+++ b/swagger/paths/water/{id}/patchWater.yaml
@@ -1,8 +1,10 @@
 tags:
   - Water
-summary: Change water record
+summary: Update a water record
 operationId: WaterController_updateWaterRecord
-description: 'Change water record with payload'
+description: |
+  Update and return a water record
+
 security:
   - bearerAuth: []
 parameters:
@@ -14,6 +16,13 @@ parameters:
       example: '65ca67e7ae7f10c88b598384'
 requestBody:
   required: true
+  description: |
+    # Description of request parameters:
+
+    **amount** - number, amount of water in record.
+
+    **time** - string, time of water record.
+
   content:
     application/json:
       schema:
@@ -32,7 +41,19 @@ requestBody:
             example: '2024-08-29 05:30 AM'
 responses:
   '200':
-    description: 'Water successfully updated by id and return'
+    description: |
+      Water record updated by id and returned
+
+      Description of response parameters:
+
+      **_id** - ObjectId, unique water record ID.
+
+      **amount** - number, amount of water in record.
+
+      **time** - string, time of water record.
+
+      **serId** - ObjectId, unique user ID.
+
     content:
       application/json:
         schema:
