add front domen+cheking of email in update user

--- a/swagger/paths/user/patchUser.yaml
+++ b/swagger/paths/user/patchUser.yaml
@@ -72,5 +72,7 @@ responses:
     $ref: '../../components/responses/401.yaml'
   '404':
     $ref: '../../components/responses/404.yaml'
+  '409':
+    $ref: '../../components/responses/409.yaml'
   '500':
     $ref: '../../components/responses/500.yaml'
