--- a/swagger/components/responses/400.yaml
+++ b/swagger/components/responses/400.yaml
@@ -21,4 +21,4 @@ content:
           properties:
             message:
               type: string
-              example: 'BadRequestError'
+              example: 'Missed new password'
