update water route with it's keys to waterNote

--- a/swagger/components/responses/ConflictError_409.yaml
+++ b/swagger/components/responses/ConflictError_409.yaml
@@ -1,4 +1,4 @@
-description: Conflict Error
+description: Conflict Error - User with such email already exists
 content:
   application/json:
     schema:
