--- a/swagger/components/responses/NotFoundError_404.yaml
+++ b/swagger/components/responses/NotFoundError_404.yaml
@@ -1,4 +1,4 @@
-description: Unauthorized error
+description: Not Found error - User not found
 content:
   application/json:
     schema:
@@ -10,10 +10,10 @@ content:
       properties:
         status:
           type: integer
-          example: 401
+          example: 404
         message:
           type: string
-          example: UnauthorizedError
+          example: NotFoundError
         data:
           type: object
           required:
@@ -21,4 +21,4 @@ content:
           properties:
             message:
               type: string
-              example: 'Unauthorized'
+              example: 'User not found'
