--- a/swagger/paths/auth/resetPassword.yaml
+++ b/swagger/paths/auth/resetPassword.yaml
@@ -11,7 +11,7 @@ requestBody:
   description: |
     # Description of request parameters:
 
-    **password** - string, user's new password.
+    **password** - string, user's new password. Field must contain at least 8 characters, maximum 64.
     **Required parameter**
 
     **token** - string, token is used to store the authorization
@@ -36,9 +36,10 @@ responses:
       application/json:
         schema:
           type: object
+  '400':
+    $ref: ../../components/responses/ValidationError_400.yaml
   '404':
-    $ref: '../../components/responses/404.yaml'
+    $ref: ../../components/responses/NotFoundError_404.yaml
   '401':
-    $ref: '../../components/responses/401.yaml'
-  '500':
-    $ref: '../../components/responses/500.yaml'
+    description: |
+      Token is expired or invalid
