--- a/swagger/components/schemas/monthlyWaterNotes.yaml
+++ b/swagger/components/schemas/monthlyWaterNotes.yaml
@@ -13,7 +13,7 @@ items:
       type: string
       example: '27, August'
     waterRate:
-      description: "User's daily norm of water"
+      description: "User's daily water consumption rate"
       type: string
       example: '1.8 L'
     percentOfWaterRate:
@@ -21,6 +21,6 @@ items:
       type: string
       example: '28%'
     amountOfRecords:
-      description: 'Amount of water records by date'
+      description: 'Amount of water notes by date'
       type: number
       example: 5
