--- a/swagger/paths/auth/resetEmail.yaml
+++ b/swagger/paths/auth/resetEmail.yaml
@@ -18,7 +18,7 @@ requestBody:
   description: |
     # Description of request parameters:
 
-    **email** - string, user's email.
+    **email** - string, user's email. Field must contain a valid email.
     **Required parameter**
 
   content:
@@ -45,7 +45,8 @@ responses:
       application/json:
         schema:
           type: object
+
   '404':
-    $ref: '../../components/responses/404.yaml'
+    $ref: ../../components/responses/NotFoundError_404.yaml
   '500':
-    $ref: '../../components/responses/500.yaml'
+    $ref: ../../components/responses/EmailSendError_500.yaml
