--- a/swagger/paths/user/currentUserInfo.yaml
+++ b/swagger/paths/user/currentUserInfo.yaml
@@ -27,8 +27,6 @@ responses:
     content:
       application/json:
         schema:
-          $ref: '../../components/schemas/user.yaml'
+          $ref: ../../components/schemas/userResponse.yaml
   '401':
-    $ref: '../../components/responses/401.yaml'
-  '500':
-    $ref: '../../components/responses/500.yaml'
+    $ref: ../../components/responses/UnauthorizedError_401.yaml
